# PortfolioOS

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .todoscanignore  BUILD_TODO.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  forge.config.ts  knip.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.renderer.json  vite.main.config.ts  vitest.config.ts
.github/: AGENT_PR_GUIDE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_task.yml  architecture_decision.yml  bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: agent-daily.yml  agent-pm.yml  agent-todo-scanner.yml  agent-worker.yml  ci.yml
agents/: README.md  __init__.py  base.py  log_config.py  pyproject.toml  vulture_whitelist.py
agents/agents/: __init__.py  overlord.py  project_manager.py  todo_scanner.py  todo_scanner_llm.py  worker.py
agents/blackboard/: __init__.py  db.py  schema.sql
agents/github/: __init__.py  issues.py
agents/llm/: __init__.py  provider.py
agents/prompts/: overlord-report.md  project-manager.md  todo-scanner.md  worker.md
agents/tests/: base_agent_test.py  blackboard_test.py  github_issues_test.py  provider_test.py  todo_scanner_llm_test.py  todo_scanner_test.py
docs/: ARCHITECTURE.md  BACKEND_PLAN.md  MULTI_AGENT_SYSTEM.md  NEXT_STEPS.md  SPEC.md
electron/: main.ts  preload.ts  types.ts
electron/db/: duckdb.ts  sqlite-schema.ts  sqlite.ts
electron/ipc/: data.ts  index.ts  llm.ts  market.ts  portfolio.ts  simulation.ts  system.ts
electron/llm/: anthropic.ts  lmstudio.ts  manager.ts  openai.ts  openrouter.ts  provider.ts  types.ts
electron/services/: keychain.ts  sidecar.ts
python/: .gitignore  README.md  pyproject.toml  vulture_whitelist.py
python/docs/: conf.py  index.rst
python/docs/api/: analysis.rst  main.rst  market.rst  simulation.rst
python/portfolioos/: __init__.py  main.py
python/portfolioos/analysis/: __init__.py  returns.py  statistics.py
python/portfolioos/db/: __init__.py  connection.py  market_store.py  portfolio_store.py  schema.py
python/portfolioos/export/: __init__.py  csv_export.py  json_export.py
python/portfolioos/ingest/: __init__.py  csv_import.py
python/portfolioos/market/: __init__.py  fred.py  validation.py  yahoo.py
python/portfolioos/portfolio/: __init__.py  cost_basis.py  net_worth.py  reconciliation.py
python/portfolioos/simulation/: __init__.py  monte_carlo.py  scenarios.py  withdrawal.py
python/scripts/: _report.py  build.py  ci.py  docs.py  lint.py  test.py  typecheck.py
python/tests/: conftest.py  main_test.py
python/tests/analysis/: returns_test.py  statistics_test.py
python/tests/db/: connection_test.py  market_store_test.py  portfolio_store_test.py
python/tests/export/: export_test.py
python/tests/ingest/: csv_import_test.py
python/tests/market/: fred_test.py  validation_test.py  yahoo_test.py
python/tests/portfolio/: cost_basis_test.py  net_worth_test.py  reconciliation_test.py
python/tests/simulation/: monte_carlo_test.py  scenarios_test.py  withdrawal_test.py
scripts/: check-coverage.sh  check-file-size.py  check-function-length.py  create-pr.sh  detect-unused.sh
src/: App.tsx  index.css  index.html  main.tsx
src/components/common/: Sidebar.tsx
src/components/fire/: FireSimulator.tsx  LifeEventsEditor.tsx  ResultsVisualization.tsx  SensitivityAnalysis.tsx  SimulationConfigPanel.tsx
src/components/market/: MacroIndicators.tsx  MarketDashboard.tsx  PriceChart.tsx
src/components/portfolio/: AccountsList.tsx  AllocationChart.tsx  CSVImport.tsx  CreateAccountForm.tsx  HoldingsTable.tsx  NetWorthCard.tsx  NetWorthChart.tsx  PortfolioDashboard.tsx
src/components/settings/: AppPreferences.tsx  LLMProviderSettings.tsx  SettingsPage.tsx
src/hooks/: useAccounts.ts  useHoldings.ts  useLLM.ts  useMarketData.ts  usePreferences.ts  useSimulation.ts  useSnapshots.ts  useTransactions.ts
src/stores/: portfolio.ts  simulation.ts  ui.ts
src/types/: api.ts  index.ts
tests/electron/db/: sqlite.test.ts
tests/electron/services/: sidecar.test.ts
