[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolioos"
version = "0.1.0"
description = "Analytics engine for PortfolioOS — Monte Carlo simulations, market data, and statistical analysis"
readme = "README.md"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
requires-python = ">=3.13"
keywords = ["finance", "fire", "monte-carlo", "portfolio", "analytics"]

dependencies = [
    "numpy>=2.1,<3",
    "pandas>=2.2,<3",
    "scipy>=1.14,<2",
]

[project.optional-dependencies]
market = [
    "yfinance>=0.2.31",
    "fredapi>=0.5.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-json-report>=1.5",
    "pytest-cov>=5.0",
    "coverage[toml]>=7.4",
    "ruff>=0.4",
    "mypy>=1.8",
    "pandas-stubs>=2.1",
    "sphinx>=7",
    "sphinx-autodoc-typehints>=2",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.gitignore",
    "/tests",
    "/scripts",
    "/docs",
    "/.reports",
]

[tool.hatch.build.targets.wheel]
packages = ["portfolioos"]

[project.scripts]
portfolioos = "portfolioos.main:main"

# ─── Ruff ───

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["portfolioos", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "D",      # pydocstyle
    "ANN",    # flake8-annotations
]
ignore = [
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D203",   # conflicts with D211
    "D213",   # conflicts with D212
    "ANN401", # allow typing.Any for dispatch/handler patterns
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN", "S101"]
"scripts/**" = ["D", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ─── pytest ───

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests requiring network access",
]

# ─── coverage ───

[tool.coverage.run]
source = ["portfolioos"]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 50
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = ".reports/test/htmlcov"

[tool.coverage.json]
output = ".reports/test/coverage.json"

# ─── mypy ───

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["yfinance.*", "fredapi.*", "scipy.*"]
ignore_missing_imports = true
